# iiif

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  _typos.toml  deny.toml
.github/: FUNDING.yml
.github/workflows/: coverage.yml
src/: error.rs  lib.rs
src/image/: format.rs  info.rs  mod.rs  quality.rs  region.rs  result.rs  rotation.rs  size.rs  storage.rs
src/presentation/: annotation.rs  canvas.rs  collection.rs  context.rs  language.rs  manifest.rs  metadata.rs  mod.rs  range.rs  resource.rs
src/storage/: localstorage.rs  mod.rs
