[package]
name = "iiif"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "gif",
    "webp",
    "rayon",
] }
imageproc = "0.25"
lopdf = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2"
urlencoding = "2.1.3"
