[package]
name = "i3f"
license = "MIT"
version = "0.0.3"
edition = "2024"
authors = ["JefferyWang <admin@wangjunfeng.com>"]
description = "A library for IIIF API, including Image, Presentation."
repository = "https://github.com/jefferywang/iiif"
documentation = "https://docs.rs/i3f"
keywords = ["iiif", "image"]
categories = ["multimedia::images"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "gif",
    "webp",
    "rayon",
] }
imageproc = "0.25"
lopdf = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2"
urlencoding = "2.1.3"
